@@ -107,7 +107,7 @@ class _BaseHDU(object):
         self._datLoc = None
         self._datSpan = None
         self._new = True
-        self.name = ''
+        self._name = ''
 
     def _getheader(self):
         return self._header
@@ -115,6 +115,16 @@ class _BaseHDU(object):
     def _setheader(self, value):
         self._header = value
     header = property(_getheader, _setheader)
+
+    @property
+    def name(self):
+        return self._name
+
+    @name.setter
+    def name(self, value):
+        if not isinstance(value, basestring):
+            raise TypeError("'name' attribute must be a string")
+        self._name = value
 
     @property
     def _data_loaded(self):
@@ -1397,36 +1407,32 @@ class ExtensionHDU(_ValidHDU):
 
     def __init__(self, data=None, header=None, name=None, **kwargs):
         super(ExtensionHDU, self).__init__(data=data, header=header)
-        if header:
-            if name is None:
-                if not self.name and 'EXTNAME' in header:
-                    self.name = header['EXTNAME']
-            else:
-                self.name = name
+        if name is not None:
+            self.name = name
 
-            if not hasattr(self, '_extver'):
-                if 'EXTVER' in header:
-                    self._extver = header['EXTVER']
-                else:
-                    self._extver = 1
+        if header and not hasattr(self, '_extver'):
+            self._extver = header.get('EXTVER', 1)
 
-    def __setattr__(self, attr, value):
-        """
-        Set an HDU attribute.
-        """
+    @property
+    def name(self):
+        # Convert the value to a string to be flexible in some pathological
+        # cases (see ticket #96)
+        if self._header and 'EXTNAME' in self._header:
+            self._name = str(self._header['EXTNAME'])
+        return self._name
 
-        if attr == 'name' and value:
-            if not isinstance(value, basestring):
-                raise TypeError("'name' attribute must be a string")
-            if not pyfits.core.EXTENSION_NAME_CASE_SENSITIVE:
-                value = value.upper()
+    @name.setter
+    def name(self, value):
+        if not isinstance(value, basestring):
+            raise TypeError("'name' attribute must be a string")
+        if not pyfits.core.EXTENSION_NAME_CASE_SENSITIVE:
+            value = value.upper()
+        if self._header:
             if 'EXTNAME' in self._header:
                 self._header['EXTNAME'] = value
             else:
                 self._header.ascard.append(
                     Card('EXTNAME', value, 'extension name'))
-
-        super(ExtensionHDU, self).__setattr__(attr, value)
 
     @classmethod
     def match_header(cls, header):
@@ -1464,6 +1470,19 @@ class ExtensionHDU(_ValidHDU):
                        0, option, errs)
         self.req_cards('GCOUNT', naxis + 4, lambda v: (_is_int(v) and v == 1),
                        1, option, errs)
+
+        # Verify that the EXTNAME keyword exists and is a string
+        if 'EXTNAME' in self._header:
+            if not isinstance(self._header['EXTNAME'], basestring):
+                err_text = 'The EXTNAME keyword must have a string value.'
+                fix_text = 'Converted the EXTNAME keyword to a string value.'
+
+                def fix(header=self._header):
+                    header['EXTNAME'] = str(header['EXTNAME'])
+
+                errs.append(self.run_option(option, err_text=err_text,
+                                            fix_text=fix_text, fix=fix))
+
         return errs
 # For backwards compatilibity, though this needs to be deprecated
 # TODO: Mark this as deprecated
