@@ -4,6 +4,10 @@ Changelog
 3.0.10 (unreleased)
 -------------------
 
+- Permits non-string values for the EXTNAME keyword when reading in a file,
+  rather than throwing an exception due to the malformatting.  Added
+  verification for the format of the EXTNAME keyword when writing. (#96)
+
 - HCOMPRESS can again be used to compress data cubes (and higher-dimensional
   arrays) so long as the tile size is effectively 2-dimensional. In fact,
   PyFITS will not automatically use compatible tile sizes even if they're not
